--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-list-endpoints": "^7.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
