--- a/.env
+++ b/.env
@@ -1,10 +1,8 @@
-MYSQLDATABASE="${{MYSQL_DATABASE}}"
-MYSQLHOST="${{RAILWAY_PRIVATE_DOMAIN}}"
-MYSQLPASSWORD="${{MYSQL_ROOT_PASSWORD}}"
-MYSQLPORT="3306"
-MYSQLUSER="root"
-MYSQL_DATABASE="railway"
-MYSQL_PUBLIC_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{MYSQL_DATABASE}}"
-MYSQL_ROOT_PASSWORD="XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE"
-MYSQL_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:3306/${{MYSQL_DATABASE}}"
-RAILWAY_PRIVATE_DOMAIN="monorail.proxy.rlwy.net"
+MYSQL_DATABASE=railway
+MYSQLHOST=monorail.proxy.rlwy.net
+MYSQLPASSWORD=XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE
+MYSQLPORT=3306
+MYSQLUSER=root
+MYSQL_PUBLIC_URL=mysql://root:XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE@monorail.proxy.rlwy.net:3306/railway
+MYSQL_URL=mysql://root:XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE@monorail.proxy.rlwy.net:3306/railway
+RAILWAY_PRIVATE_DOMAIN=monorail.proxy.rlwy.net
