--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +18,10 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
-    "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1"
+    "@faker-js/faker": "^8.4.1",
+    "nodemon": "^3.1.4"
   }
 }
