Aplicação do JWT no projeto e feito todo o caminho de rotas, falta somente colocar nas rotas que seram protegidas

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ MYSQLUSER=root
 MYSQL_PUBLIC_URL=mysql://root:XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE@monorail.proxy.rlwy.net:3306/railway
 MYSQL_URL=mysql://root:XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE@monorail.proxy.rlwy.net:3306/railway
 RAILWAY_PRIVATE_DOMAIN=monorail.proxy.rlwy.net
+JWT_SECRET=7a9d3f8b2c1e6d5a4b0e8f7c6d2a1b9e
