--- a/.env
+++ b/.env
@@ -1,9 +1,17 @@
-MYSQL_DATABASE=railway
-MYSQLHOST=monorail.proxy.rlwy.net
-MYSQLPASSWORD=XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE
-MYSQLPORT=3306
-MYSQLUSER=root
-MYSQL_PUBLIC_URL=mysql://root:XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE@monorail.proxy.rlwy.net:3306/railway
-MYSQL_URL=mysql://root:XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE@monorail.proxy.rlwy.net:3306/railway
-RAILWAY_PRIVATE_DOMAIN=monorail.proxy.rlwy.net
+DB_ENV=production
+
+# Configuração para produção (Railway 1)
+DB_HOST_PROD=monorail.proxy.rlwy.net
+DB_PORT_PROD=56321
+DB_NAME_PROD=railway
+DB_USER_PROD=root
+DB_PASSWORD_PROD=XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE
+
+# Configuração para teste (Railway 2)
+DB_HOST_TEST=roundhouse.proxy.rlwy.net
+DB_PORT_TEST=53731
+DB_NAME_TEST=railway
+DB_USER_TEST=root
+DB_PASSWORD_TEST=tqDQWuMddtixyhCdlEdcCVmQAMqzbkoS
+
 JWT_SECRET=7a9d3f8b2c1e6d5a4b0e8f7c6d2a1b9e
