--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon ./src/server.js"
   },
   "keywords": [],
@@ -15,13 +15,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-list-endpoints": "^7.1.0",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
