Correção criação de produto

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_ENV=production
+DB_ENV=test
 
 # Configuração para produção (Railway 1)
 DB_HOST_PROD=monorail.proxy.rlwy.net
@@ -8,10 +8,10 @@ DB_USER_PROD=root
 DB_PASSWORD_PROD=XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE
 
 # Configuração para teste (Railway 2)
-DB_HOST_TEST=roundhouse.proxy.rlwy.net
-DB_PORT_TEST=53731
-DB_NAME_TEST=railway
+DB_HOST_TEST=localhost
+DB_PORT_TEST=3306
+DB_NAME_TEST=new_schema2
 DB_USER_TEST=root
-DB_PASSWORD_TEST=tqDQWuMddtixyhCdlEdcCVmQAMqzbkoS
+DB_PASSWORD_TEST=1234
 
 JWT_SECRET=7a9d3f8b2c1e6d5a4b0e8f7c6d2a1b9e
