Correção produtos e usuários

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DB_ENV=test
+DB_ENV=production
 
 # Configuração para produção (Railway 1)
-DB_HOST_PROD=monorail.proxy.rlwy.net
-DB_PORT_PROD=56321
+DB_HOST_PROD=junction.proxy.rlwy.net
+DB_PORT_PROD=19149
 DB_NAME_PROD=railway
 DB_USER_PROD=root
-DB_PASSWORD_PROD=XowovCXFTKLJzjvpdUHuCHAMkVDsNtLE
+DB_PASSWORD_PROD=ywKuvFqPDftKeRQCYnBHoBTfAvMyaXUr
 
 # Configuração para teste (Railway 2)
 DB_HOST_TEST=localhost
